--- a/initindex.htm
+++ b/initindex.htm
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sample Project</title>
+<title>Sample Project One</title>
 </head>
 <body>
-<h1>Welcome to the Sample Project</h1>
+<h1>Welcome to the Sample Project One</h1>
 </body>
 </html>
